force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <description>According to the data model, the Interactions model is created when a web-form is submitted (or some other client action is taken) and tracks each interaction made by an individual over time.</description>
    <label>Interaction</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>