force-app/main/default/objects/Interaction__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <inlineHelpText>Please provide the 5-digit zip code</inlineHelpText>
    <label>Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>