force-app/main/default/objects/Interaction__c/fields/Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_of_Interest__c</fullName>
    <label>Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>