force-app/main/default/objects/Interaction__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Please provide state abbreviation.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>