force-app/main/default/objects/Interaction__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>For addresses containing a separate unit or apartment</description>
    <inlineHelpText>If the address contains a unit number, please use this field.</inlineHelpText>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>